Bug 770945 - Simple media events shouldn't be cancelable.  r=roc